--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <style>
     body{
         text-align: center;
-        background: linear-gradient(aqua,lightblue);
+        background: linear-gradient(rgb(178,132,190),lightgreen);
         
     }
     #canvas{
